feat: improved inheritance checking